--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.15)
-project(cprac C)
+cmake_minimum_required(VERSION 3.21)
+project(c_project_3 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(main.c)
+add_executable(c_project_3 main.c)
